--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LegalConnect - Legal Services Platform</title>
-    <meta name="description" content="Professional legal services platform connecting clients with lawyers and legal resources." />
+    <title>Legal Clinic Uganda - Legal Services Platform</title>
+    <meta name="description" content="Legal Clinic Uganda - Professional legal services platform connecting clients with lawyers and legal resources." />
   </head>
   <body>
     <div id="root"></div>
